--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.86.0",
+    "graphology": "^0.26.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sigma": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
