--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/sixth_degree:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/sixth_degree:v2025-09-07-1
